// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> should add custom classes on demand 1`] = `
<ul
  className="common__grid custom-class-name sg-190r8b9-root-noWrap"
/>
`;

exports[`<Grid /> should be able to render a custom tag 1`] = `
<article
  className="common__grid sg-190r8b9-root-noWrap"
/>
`;

exports[`<Grid /> should render without any further props 1`] = `
<ul
  className="common__grid sg-190r8b9-root-noWrap"
/>
`;
